<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">你好！欢迎使用My Tools!</string>
    <string name="exit">退出</string>
    <string name="screen_resolution">屏幕分辨率</string>
    <string name="return_to_main_activity">返回主界面</string>
    <string name="file_search">文件搜索</string>
    <string name="phone_info">本机信息</string>
    <string name="search">搜索</string>
    <string name="input_keyword">输入关键字</string>
    <string name="file_search_result">文件搜索结果：</string>
    <string name="income_tax_calculation">个税计算</string>
    <string name="total_income">收入总额：</string>
    <string name="yuan">（元）</string>
    <string name="PreTaxDeduction">税前扣除：</string>
    <string name="note_of_preTax">（如：三险一金等）</string>
    <string name="StartCalculate">计算</string>
    <string name="income_tax">应缴税额：</string>
    <string name="ValueOfIncomeTaxThreshold">3500</string>
    <string name="IncomeTaxThreshold">"起征点： "</string>
    <string name="CalculateIncome">反推工资</string>
    <string name="Cleanup">清零</string>
    <string name="NoteOfCalculateIncome">（如果先清零“税前扣除”，则反推出的“收入总额”=工资中的扣税部分）</string>
    <string name="IncomeTaxCalculation">个税计算</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_income_tax_calculation">IncomeTaxCalculationActivity</string>
    <string name="flashlight">手电筒</string>
    <string name="record_location">发送当前位置到邮箱</string>
    <string name="test">测试专用</string>

</resources>